--- a/src/report.html
+++ b/src/report.html
@@ -3,6 +3,9 @@
     <script src="scripts/plotly.min.js" charset="utf-8"></script>
     <script src="scripts/report-url-gen.js"></script>
     <script src="scripts/report-main.js"></script>
+
+    <link rel="icon" type="image/x-icon" href="assets/coffee-beans.svg">
+    <title>Loading Report...</title>
 </head>
 <body>
     <div id="page-body"></div>
