--- a/src/report.html
+++ b/src/report.html
@@ -4,10 +4,9 @@
     <script src="scripts/report-url-gen.js"></script>
     <script src="scripts/report-main.js"></script>
 
-    <link rel="icon" type="image/x-icon" href="assets/coffee-beans.svg">
+    <link rel="icon" type="image/x-icon" href="assets/leaf.svg">
     <title>Loading Report...</title>
 </head>
 <body>
     <div id="page-body"></div>
-    <p style="display:none" id="data-container"></p>
 </body>
