--- a/dataseeds.html
+++ b/dataseeds.html
@@ -10,6 +10,8 @@
     <script src="src/scripts/variables-page.js" type="text/javascript"></script>
     <script src="src/scripts/start-screen.js" type="text/javascript"></script>
     <script src="src/scripts/datafilter.js" type="text/javascript"></script>
+    <script src="src/scripts/graphs-page.js" type="text/javascript"></script>
+    <script src="src/scripts/graph-popup.js" type="text/javascript"></script>
     <script src="src/scripts/index.js" type="text/javascript"></script>
     
     <link href="src/styles/style-data.css" rel="stylesheet"/>
@@ -18,6 +20,7 @@
     <link href="src/styles/style-main.css" rel="stylesheet"/>
     <link href="src/styles/datafilter.css" rel="stylesheet"/>
     <link href="src/styles/style-start.css" rel="stylesheet"/>
+    <link href="src/styles/style-graphs.css" rel="stylesheet"/>
     <link href="src/styles/style-custom.css" rel="stylesheet"/>
 
     <link rel="icon" type="image/x-icon" href="src/assets/coffee-beans.svg">
@@ -255,6 +258,24 @@
         </div>
         <div class="page hidden">
             <div id="page-graphs">
+                <div class="no-access-bg" id="g-popup-bg">
+                    <div id="g-popup"></div>
+                </div>
+                <div class="c-column" id="g-left-col">
+                    <h2>Graphs</h2>
+                    <p>This page allows you to create more complex and detailed graphs to further explore any ideas or trends identified from reports.</p>
+                    <div class="c-horiz-bar">
+                        <button class="c-button" onclick = "addToGraphList()">add</button>
+                        <button class="c-button" onclick = "clearGraphList()">clear</button>
+                    </div>
+                    <div class="c-column c-manage-box" id="g-item-list"></div>
+                </div>
+                <div class="c-column" id="g-right-col">
+                    <div id="g-graph-viewer"></div>
+                    <div id="c-horiz-bar">
+                        <button class="c-button">pop out</button>
+                    </div>
+                </div>
             </div>
         </div>
         <div id="icon-attribution">Uicons by <a target='_blank' href="https://www.flaticon.com/uicons">Flaticon</a></div>
