--- a/dataseeds.html
+++ b/dataseeds.html
@@ -258,7 +258,7 @@
         </div>
         <div class="page hidden">
             <div id="page-graphs">
-                <div class="no-access-bg" id="g-popup-bg">
+                <div class="no-access-bg hidden" id="g-popup-bg">
                     <div id="g-popup"></div>
                 </div>
                 <div class="c-column" id="g-left-col">
