--- a/dataseeds.html
+++ b/dataseeds.html
@@ -12,6 +12,8 @@
     <script src="src/scripts/datafilter.js" type="text/javascript"></script>
     <script src="src/scripts/graphs-page.js" type="text/javascript"></script>
     <script src="src/scripts/graph-popup.js" type="text/javascript"></script>
+    <script src="src/scripts/graphrenderer.js" type="text/javascript"></script>
+    <script src="src/scripts/plotly.min.js" charset="utf-8"></script>
     <script src="src/scripts/index.js" type="text/javascript"></script>
     
     <link href="src/styles/style-data.css" rel="stylesheet"/>
