--- a/dataseeds.html
+++ b/dataseeds.html
@@ -275,7 +275,7 @@
                 <div class="c-column" id="g-right-col">
                     <div id="g-graph-viewer"></div>
                     <div id="c-horiz-bar">
-                        <button class="c-button">pop out</button>
+                        <button class="c-button" onclick="graphPopoutButton()">pop out</button>
                     </div>
                 </div>
             </div>
